add content to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   </head>
 
   <body>
-  <h1>Placeholder Text</h1>
+    <h1>All the projects in gra-321</h1>
+    <ul>
+      <a href="#" target="_blank"><li>Hello World</li></a>
+      <a href="#" target="_blank"><li>Hello World</li></a>
+      <a href="#" target="_blank"><li>Hello World</li></a>
+      <a href="#" target="_blank"><li>Hello World</li></a>
+    </ul>
+
   </body>
 </html>
