--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>All the projects in gra-321</h1>
     <ul>
-      <a href="#" target="_blank"><li>Hello World</li></a>
+      <a href="hello-world" target="_blank"><li>Hello World</li></a>
       <a href="#" target="_blank"><li>Hello World</li></a>
       <a href="#" target="_blank"><li>Hello World</li></a>
       <a href="#" target="_blank"><li>Hello World</li></a>
